15th fc table issue, sidenav overlapping,cards position etc

--- a/src/app/pages/stateforms/stateforms.component.scss
+++ b/src/app/pages/stateforms/stateforms.component.scss
@@ -152,7 +152,7 @@ div.active {
     overflow-y: auto;
     //  z-index: 10;
     // height: 69%;
-    width: 18%;
+    width: 15%;
 }
 
 .sticky-se {
@@ -165,9 +165,9 @@ div.active {
     width: 18%;
 }
 
-.stickyMain {
-    margin-left: 18%;
-}
+// .stickyMain {
+//     margin-left: 18%;
+// }
 
 h3 {
     margin-top: 0;
