--- a/src/app/pages/ulbform/overview/overview.component.scss
+++ b/src/app/pages/ulbform/overview/overview.component.scss
@@ -172,7 +172,7 @@ svg {
     border: 2px solid transparent;
     box-shadow: 3px 2px 2px 2px #cecece;
     height: 300px;
-    width: 220px;
+    width: 208px;
     text-align: center;
     padding: 20px 6px;
     color: rgb(0, 87, 80);
